--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3",
     "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-cssmin": "^0.9.0"
+    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-contrib-htmlmin": "^0.2.0"
   }
 }
